[HUBZERO][#10734][COM_GROUPS] Make code and interface consistent for required fields, adding 'apply' button, highlight group types better

--- a/admin/language/en-GB/en-GB.com_groups.ini
+++ b/admin/language/en-GB/en-GB.com_groups.ini
@@ -210,6 +210,8 @@ COM_GROUPS_USER_HAS_INVITED="%s has invited you to the following user group on %
 ; Error messages
 COM_GROUPS_ERROR_GROUP_ALREADY_EXIST="A user group by this name already exists. Please confirm your request."
 COM_GROUPS_ERROR_INVALID_ID="Invalid group ID. You may be using characters that are not allowed."
+COM_GROUPS_ERROR_MISSING_TYPE="Please select a Type."
+COM_GROUPS_ERROR_MISSING_CN="Please provide a CN."
 COM_GROUPS_ERROR_MISSING_INFORMATION="Missing required information"
 COM_GROUPS_ERROR_CANCEL_MEMBERSHIP_FAILED="Failed to cancel membership."
 COM_GROUPS_ERROR_EMAIL_ADMIN_FAILED="Failed to send administrator e-mail."
