[feat] Adding import capability This adds functionality to import a CSV, XML, or JSON file to mass create or update groups.

--- a/admin/language/en-GB/en-GB.com_groups.ini
+++ b/admin/language/en-GB/en-GB.com_groups.ini
@@ -7,6 +7,9 @@
 
 COM_GROUPS_CONFIGURATION="Groups Configuration"
 
+COM_GROUPS_MENU_GROUPS="Groups"
+COM_GROUPS_MENU_IMPORT="Import"
+
 COM_GROUPS_GROUP="Group"
 COM_GROUPS="Groups"
 COM_GROUPS_ABOUT="About"
