[feature] Allow custom fields to be added to groups. Custom fields can be added to the overview of a group. Fields marked as required will force the field to be completed. Fields can also have varying privacy levels so that certain fields will only show to group members.

--- a/admin/language/en-GB/en-GB.com_groups.ini
+++ b/admin/language/en-GB/en-GB.com_groups.ini
@@ -9,6 +9,7 @@ COM_GROUPS_CONFIGURATION="Groups Configuration"
 
 COM_GROUPS_MENU_GROUPS="Groups"
 COM_GROUPS_MENU_IMPORT="Import"
+COM_GROUPS_MENU_CUSTOMFIELDS="Custom Fields"
 
 COM_GROUPS_GROUP="Group"
 COM_GROUPS="Groups"
@@ -512,6 +513,8 @@ COM_GROUPS_CONFIG_FIELDSET_EMAIL="Email"
 COM_GROUPS_CONFIG_FIELDSET_UPLOAD="Upload"
 COM_GROUPS_CONFIG_FIELDSET_PAGES="Pages"
 COM_GROUPS_CONFIG_FIELDSET_SUPER="Super Groups"
+COM_GROUPS_CONFIG_CUSTOMFIELDS="Use Custom Fields?"
+COM_GROUPS_CONFIG_CUSTOMFIELDS_DESC="Custom fields can be created and required when providing the group description"
 COM_GROUPS_CONFIG_AUTO_APPROVE="Auto Approve Groups:?"
 COM_GROUPS_CONFIG_AUTO_APPROVE_DESC="Groups are auto approved at creation. Otherwise Hub administrator must manually approve group."
 COM_GROUPS_CONFIG_INTRO_MY_GROUPS="Show My Groups"
@@ -604,3 +607,4 @@ COM_GROUPS_ERROR_UPLOADING="An error occurred while attempting to upload the fil
 COM_GROUPS_ERROR_UNABLE_TO_DELETE_DIRECTORY="An error occurred while attempting to delete the directory."
 COM_GROUPS_ERROR_FILE_NOT_FOUND="File not found."
 COM_GROUPS_ERROR_UNABLE_TO_DELETE_FILE="An error occurred while attempting to delete the file."
+COM_GROUPS_SCHEMA_SAVED="Custom Fields Successfully Saved!"
