--- a/admin/language/en-GB/en-GB.com_groups.import.ini
+++ b/admin/language/en-GB/en-GB.com_groups.import.ini
@@ -93,6 +93,7 @@ COM_GROUPS_IMPORT_RUN_RESULT_ERRORMESSAGE="The following errors caused the impor
 COM_GROUPS_IMPORT_RUN_RESULT_NOTICEMESSAGE="Info:"
 COM_GROUPS_IMPORT_RUN_RESULT_TAGS="Tags"
 COM_GROUPS_IMPORT_RUN_RESULT_MEMBERS="Members"
+COM_GROUPS_IMPORT_RUN_RESULT_MANAGERS="Managers"
 COM_GROUPS_IMPORT_RUN_RESULT_PROJECTS="Projects"
 COM_GROUPS_IMPORT_RUN_RESULT_CUSTOM="Custom Data"
 COM_GROUPS_IMPORT_RUN_RESULT_UNUSED="Unused Data - <span class="_QQ_"hint"_QQ_">this data will be lost</span>"
